// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMsgForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  tabs={
    Array [
      Object {
        "body": <CheckboxElement
          checked={false}
          description="Send a message to all destinations known for this contact. If you aren't sure what this means, leave it unchecked."
          name="All Destinations"
          onChange={[Function]}
          title="All Destinations"
        />,
        "checked": false,
        "name": "Advanced",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Add an attachment to each message. The attachment can be a file you upload or a dynamic URL using expressions and variables from your Flow.
          </p>
          <div
            className="url_attachment"
          >
            <div
              className="type_choice"
            >
              <SelectElement
                entry={
                  Object {
                    "value": null,
                  }
                }
                name="Type Options"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "name": "Upload Attachment",
                      "value": "upload",
                    },
                    Object {
                      "name": "Image URL",
                      "value": "image",
                    },
                    Object {
                      "name": "Audio URL",
                      "value": "audio",
                    },
                    Object {
                      "name": "Video URL",
                      "value": "video",
                    },
                    Object {
                      "name": "PDF Document URL",
                      "value": "application",
                    },
                  ]
                }
                placeholder="Add Attachment"
                style="small"
              />
            </div>
          </div>
          <input
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </React.Fragment>,
        "checked": false,
        "name": "Attachments",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Quick Replies are made into buttons for supported channels. For example, when asking a question, you might add a Quick Reply for "Yes" and one for "No".
          </p>
          <MultiChoiceInput
            entry={
              Object {
                "value": "",
              }
            }
            helpText={
              <Trans
                i18nKey="forms.add_quick_reply"
              >
                Add a new Quick Reply and press enter.
              </Trans>
            }
            items={
              Object {
                "value": Array [],
              }
            }
            name="Quick Reply"
            onChange={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "Quick Replies",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Sending messages over a WhatsApp channel requires that a template be used if you have not received a message from a contact in the last 24 hours. Setting a template to use over WhatsApp is especially important for the first message in your flow.
          </p>
          <TembaComponent
            eventHandlers={
              Object {
                "temba-content-changed": [Function],
                "temba-context-changed": [Function],
              }
            }
            lang={null}
            tag="temba-template-editor"
            template={null}
            url="assets/templates.json"
          />
        </React.Fragment>,
        "checked": false,
        "name": "WhatsApp",
      },
    ]
  }
  title="Send Message"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send the contact a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
          "quick_replies",
        ],
        "massageForDisplay": [Function],
        "name": "Send Message",
        "type": "send_msg",
      }
    }
    onChange={[MockFunction]}
  />
  <TextInputElement
    autocomplete={true}
    counter=".sms-counter"
    entry={
      Object {
        "value": "Hey!",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    showLabel={false}
    textarea={true}
  />
  <temba-charcount
    class="sms-counter"
  />
</Dialog>
`;

exports[`SendMsgForm updates should allow switching from router 1`] = `
Array [
  Object {
    "all_urns": false,
    "attachments": Array [],
    "quick_replies": Array [],
    "text": "What is your favorite color?",
    "type": "send_msg",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;

exports[`SendMsgForm updates should save changes 1`] = `
Object {
  "attachments": Array [],
  "message": Object {
    "validationFailures": Array [],
    "value": "What is your favorite color?",
  },
  "paramsByTemplate": Object {},
  "quickReplies": Object {
    "validationFailures": Array [],
    "value": Array [
      "red",
      "green",
      "blue",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "sendAll": true,
  "template": Object {
    "value": null,
  },
  "topic": Object {
    "value": undefined,
  },
  "uploadError": "",
  "uploadInProgress": false,
  "valid": true,
}
`;

exports[`SendMsgForm updates should save changes 2`] = `
Array [
  Object {
    "all_urns": true,
    "attachments": Array [],
    "quick_replies": Array [
      "red",
      "green",
      "blue",
    ],
    "text": "What is your favorite color?",
    "type": "send_msg",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
